# ChangeLog for dev-libs/libassuan
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libassuan/ChangeLog,v 1.19 2005/09/29 02:03:25 vanquirius Exp $

  29 Sep 2005; Marcelo Goes <vanquirius@gentoo.org> libassuan-0.6.9.ebuild,
  libassuan-0.6.10.ebuild:
  Do not dodoc INSTALL.

  19 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  libassuan-0.6.9.ebuild:
  Stable on sparc

  10 Sep 2005; Aron Griffis <agriffis@gentoo.org> libassuan-0.6.9.ebuild:
  Mark 0.6.9 stable on alpha

*libassuan-0.6.10 (06 Aug 2005)

  06 Aug 2005; Daniel Black <dragonheart@gentoo.org> libassuan-0.6.9.ebuild,
  +libassuan-0.6.10.ebuild:
  version bump and transition to mirror://gnupg. x86 stable on 0.6.9

*libassuan-0.6.9-r1 (06 Aug 2005)

  06 Aug 2005; Daniel Black <dragonheart@gentoo.org>  libassuan-0.6.9-r1.ebuild files/digest-libassuan-0.6.9-r1
  # INSERT ENTRY HERE

  31 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> libassuan-0.6.9.ebuild:
  Added ~mips for bug 76381.

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> libassuan-0.6.9.ebuild:
  stable on amd64

  31 Mar 2005; Aron Griffis <agriffis@gentoo.org> libassuan-0.6.9.ebuild:
  stable on ia64

  06 Feb 2005; Markus Rothe <corsair@gentoo.org> libassuan-0.6.9.ebuild:
  Stable on ppc64

  03 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org> libassuan-0.6.9.ebuild:
  Keyworded ~sparc wrt #76381

*libassuan-0.6.9 (02 Jan 2005)

  02 Jan 2005; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +libassuan-0.6.9.ebuild:
  version bump

  20 Dec 2004; Markus Rothe <corsair@gentoo.org> libassuan-0.6.6.ebuild:
  Added ~ppc64 to KEYWORDS

  29 Aug 2004; David Holm <dholm@gentoo.org> libassuan-0.6.6.ebuild:
  Added to ~ppc.

*libassuan-0.6.6 (14 Aug 2004)

  14 Aug 2004; Mike Frysinger <vapier@gentoo.org> +libassuan-0.6.6.ebuild:
  Version bump #59067 by Colin Tinker.  Thanks to pfeifer too.

  14 Jul 2004; Danny van Dyk <kugelfang@gentoo.org> libassuan-0.6.5.ebuild: