@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libassuan
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libassuan/ChangeLog,v 1.19 2005/09/29 02:03:25 vanquirius Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libassuan/ChangeLog,v 1.20 2006/03/21 04:26:25 agriffis Exp $
+
+  21 Mar 2006; Aron Griffis <agriffis@gentoo.org> libassuan-0.6.10.ebuild:
+  Mark 0.6.10 stable on ia64
 
   29 Sep 2005; Marcelo Goes <vanquirius@gentoo.org> libassuan-0.6.9.ebuild,
   libassuan-0.6.10.ebuild:
